[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itstoolkit"
version = "0.1.0"
description = "Toolkit de ingeniería y soporte para dispositivos ITS de campo (VMS/DMS, controladores)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Serviam" }]
dependencies = [
    "pysnmp",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
# Necesario para POC-VMS-15B (carga de BMPs al panel). El toolkit base
# no lo requiere — instalar con `pip install -e .[graphics]`.
graphics = [
    "Pillow>=10",
]

[project.scripts]
itstoolkit = "itstoolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["itstoolkit*"]
exclude = ["tests*", "polling*", "shared*"]
